# solfort

./: Cargo.toml  README.md
solfort/: config.json  publicKey.txt  secretKey.txt
src/: config.rs  keypair.rs  main.rs  transactions.rs
