[package]
name = "solfort"
version = "0.1.0"
edition = "2021"
authors = ["codewithmide codewithmide@gmail.com"]
description = "A CLI wallet for Solana that can generate keypairs, request airdrops, send SOL, and check balances."
license = "MIT"
repository = "https://github.com/codewithmide/solfort"
readme = "README.md"
keywords = ["solana", "blockchain", "wallet", "cli"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[dependencies]
solana-sdk = "1.17"
solana-client = "1.17"
solana-clap-utils = "1.17"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"